# Fjfififif

./: .replit  Dockerfile  pyproject.toml  railway.toml  replit.md
telegram-bot/: .env.example  .gitignore  Dockerfile  README.md  bot.py  client.py  config.py  health.py  patches.py  requirements.txt
telegram-bot/database/: __init__.py  database.py
telegram-bot/plugins/: broadcast.py  connect.py  errors.py  fsub.py  logs.py  search.py
telegram-bot/sessions/: bot.session  bot.session-journal
telegram-bot/utils/: __init__.py  delete.py  script.py
